<resources>
    <string name="app_name">Kütüphanem</string>
    <string name="evet">Evet</string>
    <string name="hayir">Hayır</string>
    <string name="kaydet">Kaydet</string>
    <string name="geri">Geri</string>
    <string name="selectTarih">Tarih Seçiniz</string>
    <string name="ayarlaLabel">Tamam</string>
    <string name="tarihAyarla">Ayarla</string>
    <string name="iptalLabel">İptal</string>
    <string name="takePhoto">Çek</string>
    <string name="shareLabel">Paylaş</string>
    <string name="archiveLabel">Arşivle</string>
    <string name="noNetworkConnection">İnternet bağlantınız bulunmamaktadır!</string>
    <string name="vazgecLabel">Vazgeç</string>
    <string name="begenLabel">Beğen</string>
    <string name="kutuphanem_camera_permission_transaction">Bu işlemi gerçekleştirebilmeniz için kamera izni vermeniz gerekmektedir.</string>
    <string name="kutuphanem_camera_permission_settings">Bu işlemi gerçekleştirebilmeniz için cihazınızın ayarlarından kamera izni vermeniz gerekmektedir.</string>
    <string name="kutuphanem_read_permission_transaction">Bu işlemi gerçekleştirebilmeniz için Okuma İzni vermeniz gerkemektedir.</string>
    <string name="kutuphanem_read_permission_settings">Bu işlemi gerçekleştirebilmeniz için cihazınızın ayarlarından okuma izni vermeniz gerekmektedir.</string>
    <string name="anasayfaItem">Anasayfa</string>
    <string name="listeItem">Liste</string>
    <string name="parametreItem">Parametre</string>
    <string name="profilimItem">Profilim</string>
    <string name="girisLabel">Giriş</string>
    <string name="login_password_hint">Şifreniz</string>
    <string name="login_email_hint">Kullanıcı Adınız</string>
    <string name="girisButtonLabel">GİRİŞ</string>
    <string name="sifremiUnuttumLabel">Şifremi Unuttum</string>
    <string name="hesapYokKayitLabel">Hesabınız yok mu? Hemen kaydolun.</string>
    <string name="bosKullaniciAdiHata">Kullanıcı adı boş geçilemez!</string>
    <string name="bosSifreHata">Şifre boş geçilemez!</string>
    <string name="hataliLogin">Kullanıcı adı ya da şifre hatalı</string>
    <string name="yayinEviLabel">Yayınevi</string>
    <string name="kitapTurLabel">Kitap Tür</string>
    <string name="parametreScreenInfo">Bu ekranda aşağıdaki seçeneklerden birini seçerek Yayınevi, Kitap Türü ve bu parametrelerden birini ekleme işlemini gerçekleştirebilirsiniz.</string>
    <string name="parameterAddLabel">Parametre Kaydı</string>
    <string name="parametreEklemeInfo">Bu ekrandan kitap türü ya da yayınevi parametresi ekleyebilirsiniz.</string>
    <string name="yayinEviListeHataLabel">Yayınevi listesi yüklenemedi!</string>
    <string name="yayinEviSilmekIstiyormusunuz">adlı yayınevini silmek istiyor musunuz?</string>
    <string name="yayinEviSilmeHata">Yayınevi silinirken hata meydana geldi!</string>
    <string name="yayilEviSilmeTitle">Yayınevi Silme</string>
    <string name="kitapTurListeHata">Kitap türü listesi yüklenemedi!</string>
    <string name="kitapTurSilmekIstiyormusunuz">adlı kitap türünü silmek istiyor musunuz?</string>
    <string name="kitapTurSilmeHata">Kitap türü silinirken hata meydana geldi!</string>
    <string name="kitapTurSilmeTitle">Kitap Türü Silme</string>
    <string name="parametreAciklamaHint">Açıklama</string>
    <string name="parametreParamKitaptur">Kitap Türü Parametresi Ekleme</string>
    <string name="parametreParamYayinevi">Yayınevi Parametresi Ekleme</string>
    <string name="parametreAciklamaHata">Açıklama boş geçilemez!</string>
    <string name="parametreEklemeHata">Parametre eklenirken hata meydana geldi!</string>
    <string name="parametreEklemeKitapTurHata">Lütfen kitap türünü giriniz!</string>
    <string name="parametreEklemeYayinEviHata">Lütfen yayın evinin adını giriniz!</string>
    <string name="parametreEklemeLengthHata">En az 3 karakter girmelisiniz!</string>
    <string name="kitapListeError">Kitap listesi getirilemedi!Tekrar deneyiniz...</string>
    <string name="kitapListeEmpty">Henüz kitap bulunmamaktadır...</string>
    <string name="kitapShareError">Kitap paylaşıma hazırlanırken hata meydana geldi</string>
    <string name="kitapArsivResimHata">Kitap resmi arşivlenemedi!</string>
    <string name="kitapArsivleniyorText">Kitap arşivleniyor...</string>
    <string name="kitapArsivdeMevcut">Kitap zaten arşivde mevcut!</string>
    <string name="kitapListeAPI">Liste</string>
    <string name="kitapListeArsiv">Arşivim</string>
    <string name="kitapListeBegendiklerim">Beğeniler</string>
    <string name="kitapArsivMevcutDegil">Arşivinizde kayıtlı kitap bulunmamaktadır!</string>
    <string name="kitapArsivNot">NOT : Kitap listesinden dilediğiniz kitabı arşivleyebilirsiniz...</string>
    <string name="begeniListeBos">Beğeni listenizde henüz kitap bulunmamaktadır!</string>
    <string name="profilKullaniciAdiLabel">Kullanıcı adınız</string>
    <string name="profilGuncellemeLabel">Profil Güncelleme</string>
    <string name="profilAdLabel">Adınız</string>
    <string name="profilSoyadLabel">Soyadınız</string>
    <string name="profilEpostaLabel">E-Postanız</string>
    <string name="profilDogumtarihLabel">Doğum Tarihiniz</string>
    <string name="profilSayfaHata">Profil bilgileriniz getirilemedi!</string>
    <string name="ilgiAlanlarinizLegendTitle">İlgi Alanlarınız</string>
    <string name="ilgiAlanHata">İlgi alanlarınız getirilemedi!</string>
    <string name="profilGuncelleButtonLabel">Güncelle</string>
    <string name="cikisButtonLabel">Çıkış</string>
    <string name="guncelleAlertMessage">Üyelik bilgileriniz güncellenecektir. Devam etmek istiyor musunuz?</string>
    <string name="exitFromApplicationMessage">Uygulamadan çıkış yapmak istiyor musunuz?</string>
    <string name="profilPhotoTitle">Profil Fotoğrafı</string>
    <string name="adValidationErr">Lütfen adınızı boş geçmeyiniz!</string>
    <string name="soyadValidationErr">Lütfen soyadınızı boş geçmeyiniz!</string>
    <string name="epostaValidationErr">Lütfen e-postanızı boş geçmeyiniz!</string>
    <string name="epostaFormatValidationErr">E-Posta formatı hatalı!</string>
    <string name="gelismeHabderdarLabel">Son gelişmelerden haberdar olmak istiyor musunuz?</string>
    <string name="cinsiyetErkek">Erkek</string>
    <string name="cinsiyetKadin">Kadın</string>
    <string name="cinsiyetErkekValue">ERKEK</string>
    <string name="cinsiyetKadinValue">KADIN</string>
    <string name="profilGuncellemeSunucuHata">Sunucu ile bağlantı kurulamadı!</string>
    <string name="profilGuncellemeAdSoyadBilgiLabel">Ad Soyad ve E-Posta Bilgilerim</string>
    <string name="profilGuncellemeCinsiyetDogumTarLabel">Doğum Tarihi ve Cinsiyet</string>
    <string name="profilGuncellemeCinsiyetDogumTarCinsiyetBilgiLabel">Doğum Tarihi ve Cinsiyet Bilgilerim</string>
    <string name="profilGuncellemeIlgiAlanlariLabel">İlgi Alanlarım</string>
    <string name="profilGuncellemeTercihlerLabel">Uygulama Tercihlerim</string>
    <string name="cinsiyetLabel">Cinsiyetiniz</string>
    <string name="profilBilgiKisiselBilgiler">Kişisel Bilgilerim</string>
    <string name="profilBilgiHakkinda">Hakkında</string>
    <string name="profilOrnekHakkinda">1991 yılında Erzurum da dünyaya geldi. Yıldız Teknik Üniversitesi Matematik mühendisliği bölümünü bitiren Mesut Emre Çelenk evli ve 1 çocuk babasıdır. Kendisi B sınıfı ehliyete sahiptir. Boş zamanı pek olmaz. Kendisi sıkı bir çay tiryakisi olup günde en az 10 bardak çay içer. Aynı zamanda sıkı bir okur olan Mesut Emre Çelenk bol bol kitapta okur. Şu an Halkbank ta çalışmakta olup 5 yıl Java yazan bu şahıs son 2 yıldır daha çok mobil tarafta android projelerinde görev almaktadır. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare massa ut ante vehicula, non egestas massa eleifend. Donec ac imperdiet sem. Sed tincidunt ipsum lacus. Praesent elementum venenatis dictum. Pellentesque interdum purus nec sem facilisis suscipit. Aenean finibus augue condimentum massa consectetur, nec sollicitudin massa tempor. Nullam a egestas dui. Donec pellentesque tincidunt magna, interdum consequat augue dignissim lobortis. Donec dignissim, augue et varius consequat, dolor enim vulputate justo, a condimentum purus odio id neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam pulvinar ut nisl sed auctor. Pellentesque egestas ultrices purus varius sodales. </string>
    <string name="profilBilgiBildirim">Bildirimler</string>
    <string name="profilBilgiBildirimItem">Bildirimlerim</string>
    <string name="profilBilgiAppAbout">Uygulama Hakkında</string>
    <string name="profilBilgiAppInfo">Uygulama Bilgisi</string>
    <string name="profilBilgiAppSoftwareInfo">Geliştirici Hakkında</string>
    <string name="profilBilgiAppVersionNotes">Sürüm Notları</string>
    <string name="profilBilgiAppVersionBug">Hata Gönder</string>
    <string name="profilBilgiLogout">Çıkış</string>
    <string name="itemPhotoCamera">Kamera</string>
    <string name="itemPhotoLocalStorage">Galeri</string>
    <string name="itemRemoveImage">Resmi Kaldır</string>
    <string name="searchHintText">Kitap,Yazar Ara...</string>
    <string name="dashKategoriText">Kategoriler</string>
    <string name="dashKategoriListeHata">Kategori listesi yüklenemedi!</string>
    <string name="yeniArayuzText">Yenilenen arayüzümüz ile karşınızdayız!</string>
    <string name="encokYorumlananlarText">En Çok Yorumlanan İlk 5 Kitap</string>
    <string name="yeniFirsatAciklamaText"></string>
    <string name="tanitimText1">Uygulamamızın yeni versiyonu ile karşınızdayız!</string>
    <string name="tanitimText2">Daha performanslı,daha güvenli ve daha çevik!</string>
    <string name="tanitimText3">İstek ve önerilerinizi muhakkak bekliyoruz...</string>
    <string name="closeAppLabel">Uygulamayı kapatmak istediğinize emin misiniz?</string>
    <string name="kitapEklemeTitle">Kitap Ekleme</string>
    <string name="kitapAdHintText">Kitap Adı</string>
    <string name="yazarAdHintText">Yazar Adı</string>
    <string name="alinmaTarHintText">Alınma Tarihi</string>
    <string name="kitapEklemeKitapTurListeHata">Kitap Türleri Getirilemedi!</string>
    <string name="kitapEklemeYayineviListeHata">Yayınevleri Getirilemedi!</string>
    <string name="aciklamaHintText">Kitap Hakkında</string>
    <string name="kitapAdErrorText">Lütfen kitap adını giriniz!</string>
    <string name="yazarAdErrorText">Lütfen yazar adını giriniz!</string>
    <string name="alinmaTarErrorText">Lütfen alınma tarihi giriniz!</string>
    <string name="kitapAciklamaErrorText">Lütfen kitap açıklamasını giriniz!</string>
    <string name="kitapResimErrorText">Lütfen kitap resmi ekleyiniz!</string>
    <string name="kitapTurErrorText">Lütfen kitap türü seçiniz!</string>
    <string name="yayinEviErrorText">Lütfen yayınevi seçiniz!</string>
    <string name="kitapKayitProgressText">Kitap kaydı yapılıyor...</string>
    <string name="kitapResimYukleProgressText">Kitap resmi yükleniyor...</string>
    <string name="kitapKaydiBasarli">Kitap başarıyla kaydedildi</string>
    <string name="kitapKaydiHataText">Kitap kaydı esnasında hata meydana geldi!</string>
    <string name="kitapResmiYuklemeHata">Kitap resmi yüklenirken hata meydana geldi!</string>
    <string name="kitapTurSecinizText">Kitap türü seçiniz...</string>
    <string name="yayinEviSecinizText">Yayınevi seçiniz...</string>
    <string name="yayinEviNotFounCriteria">Aradığınız isimde bir yayınevi bulunmamaktadır...</string>
    <string name="kitapTurNotFounCriteria">Aradığınız isimde bir kitap türü bulunmamaktadır...</string>
    <string name="kitapEklemeResimArea">Kitap resim ekleme</string>
    <string name="kitapAdLabelText">Kitap Adı</string>
    <string name="yazarAdLabelText">Yazar Adı</string>
    <string name="kitapTurLabelText">Kitap Türü</string>
    <string name="fab_menu_manuel">Manuel Giriş</string>
    <string name="fab_menu_isbn">ISBN</string>
    <string name="fab_menu_isbn_cam">Kamera</string>
</resources>