<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@color/whiteTextColor">

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/girisLabel"
            android:textSize="22sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            android:text="@string/girisLabel"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputKullaniciAdi"
            android:layout_width="match_parent"
            android:layout_below="@+id/girisLabel"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/primaryTextColor"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextKullaniciAdi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/girisProgressBar"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/wheel_progress_indeterminate"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputSifre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputKullaniciAdi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/primaryTextColor"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSifre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cirLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@+id/textInputSifre"
            android:layout_marginTop="20dp"
            app:icon="@drawable/ic_baseline_login_24"
            android:textStyle="bold"
            android:text="@string/girisButtonLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/errorTextView"
            android:drawablePadding="2dp"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cirLoginButton"
            android:textStyle="bold"
            android:text="@string/hataliLogin"
            android:drawableLeft="@drawable/ic_baseline_warning_24"
            android:textColor="@color/design_default_color_error"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>