<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/profilBilgiLayoutId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profil_islem_main_header_height"
        android:background="@drawable/profil_gradient_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profilTitleTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/TextAppearance.White.XLarge.Alegrya.Bold"
            android:text="@string/profilGuncellemeLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profilAdSoyadTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilTitleTextViewId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/profil_islem_panel_adSoyadMargin"
            style="@style/TextAppearance.White.Medium.Ubuntu.Bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profilResimLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/profil_islem_header_height"
        app:layout_constraintBottom_toTopOf="@id/profilIslemlerItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilResimImage"
            android:layout_width="@dimen/profil_islem_header_height"
            android:layout_height="@dimen/profil_islem_header_height"
            android:src="@color/transparent" />

        <ImageView
            android:id="@+id/profilResimChangeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_65sdp"
            android:layout_marginTop="@dimen/_75sdp"
            android:clickable="true"
            android:src="@drawable/ic_baseline_settings_32" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/profilBilgiProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/lacivert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/profilIslemlerItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilResimLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mesutemre.kutuphanem.util.customcomponents.CustomCardItem
                android:id="@+id/adSoyadEpostaCardId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profil_islem_card_main_height"
                app:custom_card_title="@string/profilGuncellemeAdSoyadBilgiLabel" />

            <com.mesutemre.kutuphanem.util.customcomponents.CustomCardItem
                android:id="@+id/dogumTarCinsiyetCardId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profil_islem_card_main_height"
                app:custom_card_title="@string/profilGuncellemeCinsiyetDogumTarLabel" />

            <com.mesutemre.kutuphanem.util.customcomponents.CustomCardItem
                android:id="@+id/ilgiAlanlarimCardId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profil_islem_card_main_height"
                app:custom_card_title="@string/profilGuncellemeIlgiAlanlariLabel" />

            <com.mesutemre.kutuphanem.util.customcomponents.CustomCardItem
                android:id="@+id/uygulamaTercihlerimCardId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profil_islem_card_main_height"
                app:custom_card_title="@string/profilGuncellemeTercihlerLabel" />

            <com.mesutemre.kutuphanem.util.customcomponents.CustomCardItem
                android:id="@+id/cikisCardId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profil_islem_card_main_height"
                app:custom_card_arrowTint="@color/white"
                app:custom_card_backgroundColor="@color/acik_kirmizi"
                app:custom_card_title="@string/cikisButtonLabel"
                app:custom_card_titleColor="@color/whiteTextColor" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>