<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/backLayoutId"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/backImageId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_chevron_left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/geri"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    <TextView
        android:id="@+id/paramTurTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:textColor="#3E3D3D"
        android:textSize="16sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputParametreAciklama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            app:boxStrokeColor="@color/primaryTextColor"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextParametreAciklama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/parametreAciklamaHint"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/parametreEklemeProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/wheel_progress_indeterminate"
        android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/parametreKaydetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/kaydet"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/parametreEklemeErrorTextView"
            android:drawablePadding="2dp"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/parametreEklemeHata"
            android:drawableLeft="@drawable/ic_baseline_warning_24"
            android:textColor="@color/design_default_color_error"/>

    </LinearLayout>